2008-07-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-menu-map, vc-at-event): Fix docstring.
	(vc-dir-mode): Improve docstring.

2008-07-30  Juri Linkov  <juri@jurta.org>

	* dired-aux.el (dired-isearch-filenames-setup): Add autoload cookie
	for the sake of isearch-mode-hook in dired-mode in dired.el.

2008-07-19  Markus Triska  <markus.triska@gmx.at>

	* image-mode.el (image-mode): Set image-mode-text-map when image
	cannot be displayed.

2008-07-30  Stepehen Leake  <stephen_leake@stephe-leake.org>

	* progmodes/ada-prj.el (ada-prj-initialize-values): Fix use of deleted
	ada-xref-set-default-prj-values.
	(ada-prj-display-page): Ditto.

	* progmodes/ada-xref.el (ada-gnatstub-opts): Fix doc string.
	(ada-make-filename-from-adaname): Fix free variable.

2008-07-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-status-printer): Synchronize with the default.

2008-07-30  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-do-indent): Remove special indent for
	declarations inside a parenthetical list. The code is ill-advised,
	and doesn't work given user defined types.
	(verilog-set-auto-endcomments): Enhance function automatic
	endcomment to support functions that return user defined types.
	(verilog-mode): Add code to tell which-function-mode minor mode
	that Verilog supports this feature.
	(verilog-beg-block-re-ordered, verilog-indent-re)
	(verilog-forward-sexp, verilog-forward-wa, verilog-calc-1)
	(verilog-leap-to-head): Support the new virtual and/or protected
	tasks, as well as extern declarations of tasks for indenting and
	for foward/backward expression.

2008-07-30  Wilson Snyder  <wsnyder@wsnyder.org>

        * verilog-mode (verilog-read-decls): Allow AUTORESET to work with
	SV 'logic' signals.  [Julian Gorfajn]
	(verilog-auto-inst-column): Make verilog-auto-inst-column customizable.
	(verilog-string-replace-matches): Avoid recursion with small
	replacements.
	(verilog-auto-inst-param-value, verilog-mode-version)